[gd_scene load_steps=15 format=2]

[ext_resource path="res://Assets/boss.png" type="Texture" id=1]
[ext_resource path="res://Scripts/Boss_enemy.gd" type="Script" id=2]
[ext_resource path="res://Scenes/hurt.tscn" type="PackedScene" id=3]
[ext_resource path="res://Assets/boss_hurt.png" type="Texture" id=4]
[ext_resource path="res://Scenes/hit_prueba.tscn" type="PackedScene" id=5]

[sub_resource type="CapsuleShape2D" id=1]
radius = 24.0
height = 0.0

[sub_resource type="Animation" id=2]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ ExtResource( 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 5 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprite:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}

[sub_resource type="Animation" id=3]
resource_name = "hurt_boss"
length = 0.7
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 4 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 4 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprite:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3 ]
}

[sub_resource type="Animation" id=4]
resource_name = "walk_boss"
length = 0.5
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 5 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprite:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4 ]
}

[sub_resource type="AnimationNodeAnimation" id=5]
animation = "hurt_boss"

[sub_resource type="AnimationNodeAnimation" id=6]
animation = "walk_boss"

[sub_resource type="AnimationNodeStateMachineTransition" id=7]

[sub_resource type="AnimationNodeStateMachine" id=8]
states/hurt_boss/node = SubResource( 5 )
states/hurt_boss/position = Vector2( 459, -7 )
states/walk_boss/node = SubResource( 6 )
states/walk_boss/position = Vector2( 277, 60 )
transitions = [ "walk_boss", "hurt_boss", SubResource( 7 ) ]
start_node = "walk_boss"
end_node = "hurt_boss"
graph_offset = Vector2( 0, -87.2251 )

[sub_resource type="AnimationNodeStateMachinePlayback" id=9]

[node name="KinematicBody2D" type="KinematicBody2D"]
position = Vector2( 0, 10 )
collision_layer = 8192
collision_mask = 0
script = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 281, 172 )
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 292, 173 )
scale = Vector2( 0.847662, 0.802419 )
texture = ExtResource( 1 )
hframes = 5

[node name="floorRay" type="RayCast2D" parent="Sprite"]
position = Vector2( -40.1104, 1.24622 )
enabled = true
cast_to = Vector2( 0, 40 )
collision_mask = 1024

[node name="LeftRay" type="RayCast2D" parent="."]
position = Vector2( 271, 173 )
enabled = true
cast_to = Vector2( -25, 0 )
collision_mask = 1024

[node name="RightRay" type="RayCast2D" parent="."]
position = Vector2( 290, 172 )
enabled = true
cast_to = Vector2( 25, 0 )
collision_mask = 1024

[node name="Area2D" parent="." instance=ExtResource( 3 )]
position = Vector2( -74, 179 )
collision_layer = 8192
collision_mask = 0

[node name="CollisionShape2D" parent="Area2D" index="0"]
position = Vector2( 355, -12 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 2 )
anims/hurt_boss = SubResource( 3 )
anims/walk_boss = SubResource( 4 )

[node name="AnimationTree" type="AnimationTree" parent="."]
tree_root = SubResource( 8 )
anim_player = NodePath("../AnimationPlayer")
active = true
parameters/playback = SubResource( 9 )

[node name="Area2D2" parent="." instance=ExtResource( 5 )]
position = Vector2( 168, 241 )
damage = 200

[node name="CollisionShape2D" parent="Area2D2" index="0"]
position = Vector2( 113, -72 )

[connection signal="area_entered" from="Area2D" to="." method="_on_Area2D_area_entered"]

[editable path="Area2D"]
[editable path="Area2D2"]
